# xtce-sim

./: .gitignore  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
docs/: agent-director-design.md  power-wiring-model.md  power_one_line.py  sonarcloud.md
examples/: README.md  imaging_sat.behavior.toml  imaging_sat.xml
examples/imaging_sat/: adcs.toml  comms.toml  imager.toml  imaging_sat.xml  power.toml  set_all_fields.sh  system.toml  thermal.toml
examples/my_vehicle/: my_vehicle.xml  my_vehicle_commands.xml  my_vehicle_telemetry.xml
tests/: test_behavior.py  test_ccsds.py  test_cli.py  test_client.py  test_codec_limits.py  test_dynamics_algebra.py  test_dynamics_control.py  test_dynamics_environment.py  test_dynamics_model.py  test_dynamics_modes.py  test_dynamics_plant.py  test_dynamics_sensors.py  test_edges.py  test_example_scripts.py  test_exercise.py  test_fileservice.py  test_generate.py  test_generate_edges.py  test_logs.py  test_parser_full.py  test_parser_warnings.py  test_power_model.py  test_render.py  test_seqservice.py  test_sequencer.py  test_sequences.py  test_server.py  test_synth.py  test_trace.py  test_webui.py
tests/data/: README.md  full_features.xml
xtce_sim/: __init__.py  behavior.py  ccsds.py  cli.py  client.py  codec.py  definition.py  exercise.py  fileservice.py  generate.py  logs.py  models.py  parser.py  render.py  seqservice.py  sequencer.py  sequences.py  server.py  synth.py  webui.py
xtce_sim/behavior/: __init__.py  engine.py  loader.py  spec.py  validate.py
xtce_sim/parser/: core.py  (+6 more)
(+31 files in other folders)
