[project]
name = "xtce-sim"
version = "0.1.0"
description = "Run a CCSDS satellite simulator straight from an XTCE file."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fred Messinger" }]
keywords = ["xtce", "ccsds", "satellite", "telemetry", "simulator", "spacecraft"]
dependencies = [
    "click",
    "crcmod",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff"]

[project.scripts]
xtce-sim = "xtce_sim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xtce_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["xtce_sim"]
branch = true
relative_files = true   # repo-relative paths in coverage.xml so SonarCloud resolves them

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "N"]
lint.ignore = ["E501"]
